fix: fixed track overview timeline extra padding issue and tweaked weight of time in timestamps

--- a/src/components/tracks/OverviewTimeline.module.css
+++ b/src/components/tracks/OverviewTimeline.module.css
@@ -80,7 +80,10 @@
   padding-left: calc(var(--timeline-padding) + var(--timeline-spacing));
   font-size: var(--maru-small);
   line-height: var(--baseline-1of3);
-  /* font-weight: normal; */
+
+  &::before {
+    content: none;
+  }
 
   & a::before {
     content: " ";
